--- a/orderapp/src/admin/adminPages/Orders.css
+++ b/orderapp/src/admin/adminPages/Orders.css
@@ -146,6 +146,10 @@
     width: 20%;
   }
 
+  .confirmationContainer{
+    margin-left: 25%;
+  }
+
 
 
 
